--- a/4.深入理解Vue组件/7.作用域插槽.html
+++ b/4.深入理解Vue组件/7.作用域插槽.html
@@ -2,9 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Vue中的作用域插槽</title>
+    <script src="./vue.js"></script>
 </head>
 <body>
+    <div id="root">
+        <child>
+            <!--父组件向子组件传入作用域插槽（必须由<template>包裹），并说明从子组件接收的数据来自哪里-->
+            <template slot-scope="props">
+                <!--自定义展示-->
+                <li>{{props.item}} - hello</li>
+            </template>
+        </child>
+    </div>
 
+    <script>
+
+        Vue.component('child',{
+            data: function(){
+                return{
+                    list:[1,2,3,4]
+                }
+            },
+            template:
+                '<div>' +
+                    '<ul>' +
+                        '<slot v-for="item of list":item=item></slot>' +
+                    '</ul>' +
+                '</div>'
+        })
+
+        var vm = new Vue({
+            el: '#root'
+        })
+    </script>
 </body>
 </html>
