完成第五章：Vue动画

--- a/5.Vue动画特效/1.Vue中CSS动画原理.html
+++ b/5.Vue动画特效/1.Vue中CSS动画原理.html
@@ -32,7 +32,7 @@
         var vm = new Vue({
             el: '#root',
             data: {
-                show: true
+                showBoolean: true
             },
         })
     </script>
