--- a/5.Vue动画特效/2.在Vue中使用animate.css库.html
+++ b/5.Vue动画特效/2.在Vue中使用animate.css库.html
@@ -25,7 +25,7 @@
     var vm = new Vue({
         el: '#root',
         data: {
-            show: true
+            showBoolean: true
         },
     })
 </script>
